--- a/templates/2_MCT_Registro_2_entidad_desaprobado_19801a7e77584e188dab5e280b827ac8.html
+++ b/templates/2_MCT_Registro_2_entidad_desaprobado_19801a7e77584e188dab5e280b827ac8.html
@@ -47,7 +47,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="igac_banner.jpg" alt="IGAC">
+            <img src="https://www.igac.gov.co/sites/igac.gov.co/files/imageblock/logo-igac.jpg" alt="IGAC">
         </div>
         <div class="content">
             <p class="message">{{ nombre_entidad }} confirmamos el rechazo de su solicitud para el registro de productos, a continuación se detalla la(s) razon(es) por las cuales no se acepta el registro.</p>
