--- a/templates/5_MCT_Validacion_Carto_entidad_aprobado_1fa56d293d0b4f9483db26ce4458608e.html
+++ b/templates/5_MCT_Validacion_Carto_entidad_aprobado_1fa56d293d0b4f9483db26ce4458608e.html
@@ -47,7 +47,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="igac_banner.jpg" alt="IGAC">
+            <img src="https://www.igac.gov.co/sites/igac.gov.co/files/imageblock/logo-igac.jpg" alt="IGAC">
         </div>
         <div class="content">
             <p class="message">Sr(es) {{ proveedor }} el presente correo es para notificar que el producto {{ proyecto_contrato }}  surtio exitósamente el proceso de validación.</p>
