--- a/templates/1_MCT_Pre_Registro_IGAC_7bc22629ff184d24b658aaa9e8629434.html
+++ b/templates/1_MCT_Pre_Registro_IGAC_7bc22629ff184d24b658aaa9e8629434.html
@@ -47,7 +47,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="igac_banner.jpg" alt="IGAC">
+            <img src="https://www.igac.gov.co/sites/igac.gov.co/files/imageblock/logo-igac.jpg" alt="IGAC">
         </div>
         <div class="content">
             <p class="message">{{ nombre_entidad }} ha registrado un nuevo proyecto para su revisión, por favor acceder al siguiente <a href="{{ base_url }}">link</a>
