--- a/templates/1_MCT_Pre_Registro_entidad_7bc22629ff184d24b658aaa9e8629434.html
+++ b/templates/1_MCT_Pre_Registro_entidad_7bc22629ff184d24b658aaa9e8629434.html
@@ -47,7 +47,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="igac_banner.jpg" alt="IGAC">
+            <img src="https://www.igac.gov.co/sites/igac.gov.co/files/imageblock/logo-igac.jpg" alt="IGAC">
         </div>
         <div class="content">
             <p class="message">{{ nombre_entidad }} gracias por su registro, una vez el Insituto Geográfico Agustín Codazzi verifique su solicitud de registro será notificado vía correo electrónico para que pueda continuar con el proceso.
