--- a/templates/3_MCT_Registro_Productos_3_IGAC_fc889d6d836a4c42bd3fc0e2ba631513.html
+++ b/templates/3_MCT_Registro_Productos_3_IGAC_fc889d6d836a4c42bd3fc0e2ba631513.html
@@ -47,7 +47,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="igac_banner.jpg" alt="IGAC">
+            <img src="https://www.igac.gov.co/sites/igac.gov.co/files/imageblock/logo-igac.jpg" alt="IGAC">
         </div>
         <div class="content">
             <p class="message">{{ nombre_entidad }} ha registrado los productos {{ productos_registro }} por favor, realizar la validación correspondiente para cada producto entregado.</p>
