--- a/templates/4_MCT_Chequeo_MDT_IGAC_aprobado_e43f427c382145849b7703f24b2a7cbd.html
+++ b/templates/4_MCT_Chequeo_MDT_IGAC_aprobado_e43f427c382145849b7703f24b2a7cbd.html
@@ -47,7 +47,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="igac_banner.jpg" alt="IGAC">
+            <img src="https://www.igac.gov.co/sites/igac.gov.co/files/imageblock/logo-igac.jpg" alt="IGAC">
         </div>
         <div class="content">
             <p class="message">{{ resp_validacion }} se le ha asignado la validación del producto {{ tipo_producto_chequeo }} por favor ingrese al siguiente <a href="{{ url_validacion_producto }}">link</a></p>
