--- a/templates/4_MCT_Chequeo_MDT_entidad_desaprobado_e43f427c382145849b7703f24b2a7cbd.html
+++ b/templates/4_MCT_Chequeo_MDT_entidad_desaprobado_e43f427c382145849b7703f24b2a7cbd.html
@@ -47,7 +47,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="igac_banner.jpg" alt="IGAC">
+            <img src="https://www.igac.gov.co/sites/igac.gov.co/files/imageblock/logo-igac.jpg" alt="IGAC">
         </div>
         <div class="content">
             <p class="message">Sr(es) {{ nombre_entidad }} el producto {{ tipo_producto_chequeo }} correspondiente al proyecto {{ nombre_proyecto }} no surtió exitosamente el proceso de chequeo inicial. A cotinuación la información detallada:</p>
