--- a/templates/5_MCT_Validacion_MDT_entidad_rechazado_a6953e0268a34a8abd142a50f510cd14.html
+++ b/templates/5_MCT_Validacion_MDT_entidad_rechazado_a6953e0268a34a8abd142a50f510cd14.html
@@ -47,7 +47,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="igac_banner.jpg" alt="IGAC">
+            <img src="https://www.igac.gov.co/sites/igac.gov.co/files/imageblock/logo-igac.jpg" alt="IGAC">
         </div>
         <div class="content">
         {% if ajustes_menores == "si" %}
