--- a/templates/6_Registro_Productos_IGAC_9804110a3fbd42e798a360aa4a19eef4.html
+++ b/templates/6_Registro_Productos_IGAC_9804110a3fbd42e798a360aa4a19eef4.html
@@ -47,7 +47,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="igac_banner.jpg" alt="IGAC">
+            <img src="https://www.igac.gov.co/sites/igac.gov.co/files/imageblock/logo-igac.jpg" alt="IGAC">
         </div>
         <div class="content">
             <p class="message">{{ nombre_entidad }} ha registrado los productos {{ productos_registro }} por favor, realizar la validación correspondiente para cada producto entregado.</p>
